force-app/main/default/objects/aecm__Functional_Unit__c/aecm__Functional_Unit__c.object-meta.xml
<CustomObject>
    <description>Business unit/function container for a group of capability areas, i.e. Sales, Service.</description>
    <label>Functional Unit</label>
    <nameField>
        <label>Function Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Functional Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>