force-app/main/default/objects/aecm__Functional_Unit__c/fields/aecm__Effort__c.field-meta.xml
<CustomField>
    <fullName>aecm__Effort__c</fullName>
    <label>Capabilities Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>