force-app/main/default/objects/aecm__Functional_Unit__c/fields/aecm__Geo__c.field-meta.xml
<CustomField>
    <fullName>aecm__Geo__c</fullName>
    <label>DEPRECIATED Geo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>