force-app/main/default/objects/aecm__Functional_Unit__c/fields/aecm__Geography__c.field-meta.xml
<CustomField>
    <fullName>aecm__Geography__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Geo for the Functional Unit</description>
    <label>Geography</label>
    <referenceTo>aecm__Geo__c</referenceTo>
    <relationshipLabel>Functional Units</relationshipLabel>
    <relationshipName>Functional_Units</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>