force-app/main/default/objects/aecm__Functional_Unit__c/fields/aecm__Process_Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>aecm__Process_Taxonomy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Point to a Process Taxonomy that supports this Function.</inlineHelpText>
    <label>Process Taxonomy</label>
    <referenceTo>aecm__Process_Taxonomy__c</referenceTo>
    <relationshipName>Functions</relationshipName>
    <type>Lookup</type>
</CustomField>