force-app/main/default/objects/aecm__Functional_Unit__c/fields/aecm__Short_Description__c.field-meta.xml
<CustomField>
    <fullName>aecm__Short_Description__c</fullName>
    <label>Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>