force-app/main/default/objects/aecm__Functional_Unit__c/listViews/aecm__Active_Functions.listView-meta.xml
<ListView>
    <fullName>aecm__Active_Functions</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aecm__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Functions</label>
</ListView>